<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/resultingDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:text="@string/initialDate"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/fromDatePickerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:text="@string/fromTextView"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/fromDate2"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/fromDatePickerTextView"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_toEndOf="@+id/fromDatePickerTextView"
        android:layout_toRightOf="@+id/fromDatePickerTextView"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="date" />

    <TextView
        android:id="@+id/toDatePickerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fromDatePickerTextView"
        android:layout_alignRight="@+id/fromDatePickerTextView"
        android:layout_below="@+id/fromDatePickerTextView"
        android:layout_marginTop="30dp"
        android:text="@string/afterSomeDaysTextView"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/afterDays"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/toDatePickerTextView"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/toDatePickerTextView"
        android:layout_toRightOf="@+id/toDatePickerTextView"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/calculateDateButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/calculateButtonText" />

</RelativeLayout>