<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateEventLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.EditSavedEventActivity"
    tools:showIn="@layout/activity_edit_saved_event">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/eventTitleTextView"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/eventTitleEditTextUpdate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/titleTextView"
        android:background="@android:drawable/editbox_background_normal"
        android:ellipsize="end"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1"
        android:scrollHorizontally="true" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/eventTitleEditTextUpdate"
        android:layout_marginTop="40dp"
        android:text="@string/description_text_view"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/eventDescriptionEditTextUpdate"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/descriptionTextView"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="5"
        android:minLines="1"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/fromDatePickerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/eventDescriptionEditTextUpdate"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/fromTextView"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/fromDateUpdate"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/fromDatePickerTextView"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/fromDatePickerTextView"
        android:layout_toRightOf="@+id/fromDatePickerTextView"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="date" />

    <TextView
        android:id="@+id/toDatePickerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fromDatePickerTextView"
        android:layout_alignRight="@+id/fromDatePickerTextView"
        android:layout_below="@+id/fromDatePickerTextView"
        android:layout_marginTop="35dp"
        android:text="@string/untilTextView"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/toDateUpdate"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/toDatePickerTextView"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/toDatePickerTextView"
        android:layout_toRightOf="@+id/toDatePickerTextView"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="date" />

    <CheckBox
        android:id="@+id/fromCheckBoxUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fromDatePickerTextView"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/fromDateUpdate"
        android:layout_toRightOf="@+id/fromDateUpdate"
        android:onClick="onCheckBoxClicked"
        android:text="@string/todayCheckBoxText" />

    <CheckBox
        android:id="@+id/untilCheckBoxUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/toDatePickerTextView"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/toDateUpdate"
        android:layout_toRightOf="@+id/toDateUpdate"
        android:onClick="onCheckBoxClicked"
        android:text="@string/todayCheckBoxText" />

    <Button
        android:id="@+id/updateEventButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/toDateUpdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/updateButtonText" />

</RelativeLayout>